syntax = "proto3";

package proto;

option java_package = "org.oppia.android.scripts.proto";
option java_multiple_files = true;

message AffectedTestsBucket {
  string cache_bucket_name = 1;
  repeated string affected_test_targets = 2;
}
